<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:backgroundTint="@color/palette_base_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/palette_secondary"
        app:tabTextColor="@color/md_white_1000">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doing_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_text" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs_tasks">

    </androidx.viewpager2.widget.ViewPager2>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"

        android:backgroundTint="@color/palette_secondary"
        android:text="@string/add_task_button"
        android:textColor="@color/md_white_1000"
        app:icon="@drawable/ic_outline_add_24"
        app:iconTint="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>