<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/project_item_bg_deadline">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/most_close_projects"
        android:text="@string/most_close_projects"
        android:textColor="@color/md_blue_grey_900"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_widget_project_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appwidget_text">

        <ListView
            android:id="@+id/list_view_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:divider="@null"
            android:padding="8dp" />

        <RelativeLayout
            android:id="@+id/project_widget_no_project_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/project_widget_no_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_projects"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/project_widget_no_project_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/project_widget_no_project"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/widget_add_project"
                android:textColor="@color/md_blue_grey_800"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>