<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AddTaskFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_task_task_name"
                style="@style/Theme.Semestralka.InputTextOutlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_task_task_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_input_task_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_task_task_description"
                style="@style/Theme.Semestralka.InputTextOutlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_task_task_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_task_task_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/task_input_task_description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="10"
                    app:backgroundTint="@color/md_amber_900" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_task_task_type_layout"
                style="@style/Theme.Semestralka.InputTextOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_task_task_description">

                <TextView
                    android:id="@+id/edit_task_task_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_input_task_type"
                    android:textColor="@color/md_grey_900"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/edit_task_task_type_label">

                    <RadioGroup
                        android:id="@+id/task_type_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_task_task_type_label">

                        <RadioButton
                            android:id="@+id/task_type_radio_to_do"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/to_do_text"
                            android:textColor="@color/radio_color_selector"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/task_type_radio_doing"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/doing_text"
                            android:textColor="@color/radio_color_selector"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/task_type_radio_done"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/task_type_radio_to_do"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <RadioButton
                            android:id="@+id/task_type_radio_done"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/done_text"
                            android:textColor="@color/radio_color_selector"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </RadioGroup>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/edit_task_task_color_layout"
                style="@style/Theme.Semestralka.InputTextOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_task_task_type_layout">

                <TextView
                    android:id="@+id/edit_task_task_color_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_input_task_color"
                    android:textColor="@color/md_grey_900"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/edit_task_task_color_label">

                    <RadioGroup

                        android:id="@+id/task_color_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_task_task_color_label">


                        <RadioButton
                            android:id="@+id/task_color_radio_default"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector_default"
                            android:button="@android:color/transparent"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/default_color"
                            android:textColor="@color/radio_color_selector_bright_bg"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/task_color_radio_red"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector_red"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/red_color"
                            android:textColor="@color/radio_color_selector"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/task_color_radio_blue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector_blue"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/blue_color"
                            android:textColor="@color/radio_color_selector_bright_bg"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/task_type_radio_done"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/task_type_radio_to_do"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <RadioButton
                            android:id="@+id/task_color_radio_yellow"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector_yellow"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/yellow_color"
                            android:textColor="@color/radio_color_selector_bright_bg"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <RadioButton
                            android:id="@+id/task_color_radio_green"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/radio_selector_green"
                            android:button="@android:color/transparent"
                            android:gravity="center"
                            android:text="@string/green_color"
                            android:textColor="@color/radio_color_selector_bright_bg"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </RadioGroup>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="34dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_task_task_color_layout"
                app:layout_constraintVertical_bias="0.0">

                <Button
                    android:id="@+id/delete_task_submit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_alignBottom="@+id/edit_project_submit_btn"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/md_red_600"
                    android:drawableLeft="@drawable/ic_round_delete_forever_24"
                    android:text="@string/button_delete_task"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/edit_task_submit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@+id/delete_task_submit_btn"
                    android:backgroundTint="@color/md_orange_500"
                    android:drawableLeft="@drawable/ic_round_edit_24"
                    android:text="@string/button_edit_task"
                    tools:ignore="ButtonStyle" />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>